# dbt_airflow_cicd_local_setup

./: .gitignore  docker-compose.yml  generate_fake_data.py  pyproject.toml
