[tool.poetry]
name = "1-local-setup"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.10.11"
dbt-postgres = "^1.9.1"
duckdb = "^1.3.2"
faker = "^37.6.0"
pandas = "^2.3.2"
numpy = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
